--- a/workPage/photo.html
+++ b/workPage/photo.html
@@ -70,6 +70,14 @@
     </div>
 
     <div class="photoBox"></div>
+
+    <div class="scrollTopBtn">
+      <svg xmlns="http://www.w3.org/2000/svg" width="153" height="99" viewBox="0 0 153 99" fill="none">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.37175 85.6924C-0.468265 89.077 -0.026793 94.1231 3.3578 96.9631C6.7424 99.8031 11.7884 99.3616 14.6285 95.977L77.5897 20.9428L138.657 93.7197C141.497 97.1043 146.543 97.5457 149.927 94.7057C153.312 91.8657 153.753 86.8196 150.913 83.4351L83.8228 3.47955C83.7758 3.42353 83.7282 3.36831 83.68 3.3139C83.3945 2.97932 83.0775 2.66387 82.7294 2.37175C79.3448 -0.468264 74.2987 -0.0267892 71.4587 3.35781L2.37175 85.6924Z" 
+        fill="white" fill-opacity="0.70"/>
+      </svg>
+    </div>
+
     <footer>
       <div class="footerBox" id="footer">
         <div class="footerTittleBox">
@@ -107,10 +115,12 @@
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
     <script src="../../../js/init.js"></script>
     <script src="../js/header.js"></script>
-    <script src="../js/WorkPage/photo.js"></script>
-    <script src="../js/footer.js"></script>
+    <script  src="../js/footer.js"></script>
+    <script  src="../js/WorkPage/photo.js"></script>
+
   </body>
 </html>
