--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     <div class="lendingPage" >
         <img  class="scrollBox landingPageSpeed" src="assets/me_1.jpg" alt="" id="imgBox"   data-speed="3">
         <div id="textBox" class="scrollBox"  >
-            <div id="textBoxTitle" class=" landingPageSpeed" data-speed="20">
+            <div id="textBoxTitle" class=" landingPageSpeed" data-speed="15">
               <h3>CHUN-CHIEH</h3>
               <h3>Liang</h3>
             </div>
-            <div id="textBoxContent"  class=" landingPageSpeed" data-speed="10" >
+            <div id="textBoxContent"  class=" landingPageSpeed" data-speed="5" >
               <h5>UX/UI</h5>
               <h5>Font-End Developer</h5>
             </div>
@@ -78,7 +78,7 @@
 
         <div class="MainworkTwoBox">
             <div class="MainWork">
-                <a href="#" class="MainWorkVideoBox">
+                <a href="/workPage/goAhand.html" class="MainWorkVideoBox">
                     <p class="MainWorkVideoMore">more</p>
                     <video src="assets/video/goAhand_1.mp4" autoplay muted loop></video>
                 </a>
@@ -102,10 +102,10 @@
     
         <div class="sec">
             <div class="secWork" id="secWork1" >
-                <a href="#" class="secWorkVideoBox secWorkSpeed1" data-speed="1.5">
+                <a href="/workPage/homeTrust.html" class="secWorkVideoBox secWorkSpeed1" data-speed="1.5">
                     <img src="assets/images/VI/HomeTrust/VI.jpg" alt="">
                 </a>
-                <a href="#" class="secWorkContentBox secWorkSpeed1" data-speed="1.5">
+                <a href="/workPage/dropCoffee.html" class="secWorkContentBox secWorkSpeed1" data-speed="1.5">
                     <p class="secWorkSubTitle">VI</p>
                     <p class="secWorkTitle">HomeTrust</p>
     
@@ -136,40 +136,40 @@
     <div class="flowbox" >
         <p class="flowTitle">攝影作品</p>
         <div class="flow" >
-            <a href="" class="flowImgBox" id="fl-1" data-speed="1">
+            <a  class="flowImgBox" id="fl-1" data-speed="1">
                 <img src="assets/images/photo/1.jpg" alt="">
             </a>
-            <a href="" class="flowImgBox" id="fl-2" data-speed="2">
+            <a  class="flowImgBox" id="fl-2" data-speed="2">
                 <img src="assets/images/photo/first.jpg" alt="">
             </a >
-            <a href="" class="flowImgBox" id="fl-3" data-speed="3">
+            <a  class="flowImgBox" id="fl-3" data-speed="3">
                 <img src="assets/images/photo/3.jpg" alt="">
             </a>
-            <a href="" class="flowImgBox" id="fl-4" data-speed="6">
+            <a  class="flowImgBox" id="fl-4" data-speed="6">
                 <img src="assets/images/photo/4.jpg" alt="">
             </a>
-            <a href="" class="flowImgBox" id="fl-5" data-speed="4">
+            <a  class="flowImgBox" id="fl-5" data-speed="4">
                 <img src="assets/images/photo/5.jpg" alt="">
             </a >
-            <a href="" class="flowImgBox" id="fl-6" data-speed="10">
+            <a  class="flowImgBox" id="fl-6" data-speed="10">
                 <img src="assets/images/photo/6.jpg" alt="">
             </a>
-            <a href="" class="flowImgBox" id="fl-7" data-speed="7">
+            <a  class="flowImgBox" id="fl-7" data-speed="7">
                 <img src="assets/images/photo/7.jpg" alt="">
             </a>
-            <a href="" class="flowImgBox" id="fl-8" data-speed="5">
+            <a  class="flowImgBox" id="fl-8" data-speed="5">
                 <img src="assets/images/photo/8.jpg" alt="">
             </a >
-            <a href="" class="flowImgBox" id="fl-9" data-speed="8">
+            <a  class="flowImgBox" id="fl-9" data-speed="8">
                 <img src="assets/images/photo/9.jpg" alt="">
             </a>
-            <a href="" class="flowImgBox" id="fl-10" data-speed="10">
+            <a  class="flowImgBox" id="fl-10" data-speed="10">
                 <img src="assets/images/photo/10.jpg" alt="">
             </a>
-            <a href="" class="flowImgBox" id="fl-11" data-speed="7">
+            <a  class="flowImgBox" id="fl-11" data-speed="7">
                 <img src="assets/images/photo/11.jpg" alt="">
             </a >
-            <a href="" class="flowImgBox" id="fl-12" data-speed="5">
+            <a href="/workPage/photo.html" class="flowImgBox" id="fl-12" data-speed="5">
                 <div class="flowPBox">
                     <p>更多</p>
                 </div>
