--- a/workPage/goAhand.html
+++ b/workPage/goAhand.html
@@ -191,7 +191,7 @@
             <p class="workschildSubTitle"></p>
           </div>
           <div class="worksChildTitleChiBox">
-            <p class="workschildSubTitleChi">旅行規劃或日常使用</p>
+            <p class="workschildSubTitleChi">規劃或日常使用</p>
             <p class="workschildTitleChi">冒險</p>
           </div>
         </div>
