--- a/workPage/photo.html
+++ b/workPage/photo.html
@@ -31,20 +31,20 @@
     </header>
     <div class="headerPage">
       <div class="headerContentBox">
-        <a href="../../index.html">首頁</a>
-        <a href="../../index.html">Home</a>
+        <a href="../index.html">首頁</a>
+        <a href="../index.html">Home</a>
       </div>
       <div class="headerContentBox">
-        <a href="../../about.html">關於</a>
+        <a href="../about.html">關於</a>
         <a href="../../about.html">ABout</a>
       </div>
       <div class="headerContentBox">
-        <a href="../../work.html">作品</a>
-        <a href="../../work.html">Works</a>
+        <a href="../work.html">作品</a>
+        <a href="../work.html">Works</a>
       </div>
       <div class="headerContentBox">
-        <a href="../../contact.html">聯絡</a>
-        <a href="../../contact.html">contact</a>
+        <a href="../contact.html">聯絡</a>
+        <a href="../contact.html">contact</a>
       </div>
       <div class="headerContentBox2">
         <a href="#">IG</a>
