--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
             <a href="contact.html">contact</a>
         </div>
         <div class="headerContentBox2">
-            <a href="#">IG</a>
-            <a href="#">Behance</a>
+            <a href="https://www.instagram.com/ph_nagi/">IG</a>
+            <a href="https://www.behance.net/ea627e09">Behance</a>
         </div>
     </div>
 
     <div class="lendingPage" >
-        <img  class="scrollBox landingPageSpeed" src="assets/me_1.jpg" alt="" id="imgBox"   data-speed="3">
+        <img  class="scrollBox landingPageSpeed" src="assets/me_1.jpg" alt="" id="imgBox"   data-speed="5">
         <div id="textBox" class="scrollBox"  >
-            <div id="textBoxTitle" class=" landingPageSpeed" data-speed="15">
+            <div id="textBoxTitle" class=" landingPageSpeed" data-speed="10">
               <h3>CHUN-CHIEH</h3>
               <h3>Liang</h3>
             </div>
-            <div id="textBoxContent"  class=" landingPageSpeed" data-speed="5" >
+            <div id="textBoxContent"  class=" landingPageSpeed" data-speed="2" >
               <h5>UX/UI</h5>
               <h5>Font-End Developer</h5>
             </div>
