--- a/workPage/other.html
+++ b/workPage/other.html
@@ -46,8 +46,8 @@
         <a href="../contact.html">contact</a>
       </div>
       <div class="headerContentBox2">
-        <a href="#">IG</a>
-        <a href="#">Behance</a>
+        <a href="https://www.instagram.com/ph_nagi/">IG</a>
+        <a href="https://www.behance.net/ea627e09">Behance</a>
       </div>
     </div>
 
@@ -75,6 +75,39 @@
         </div>
       </div>
     </div>
+
+    <div class="worksChildImgBox">
+      <img src="../assets/images/other/web3.png" />
+    </div>
+    <div class="workschildTextFlexBox">
+      <div class="workschildTextBox">
+        <p class="worksChildContentText">
+          為了設計出與他人較為不同的作品集網站，網站內利用了動態和視差差滾動製作，
+          並且因為是透過自己撰寫，可以客製出不同的設計。
+      
+        </p>
+        <div class="worksChildTitleBox">
+          <div class="worksChildTitleEnBox">
+            <p class="workschildTitle">portfolio</p>
+            <p class="workschildSubTitle">Design/develop</p>
+            <a class="worksChildptototype" href="https://github.com/Phnagi/portfolio.github.io"
+              >code</a
+            >
+          </div>
+          <div class="worksChildTitleChiBox">
+            <p class="workschildTitleChi"></p>
+
+            <p class="workschildSubTitleChi"></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
     <footer>
       <div class="footerBox" id="footer">
         <div class="footerTittleBox">
