--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
             <a href="contact.html">contact</a>
         </div>
         <div class="headerContentBox2">
-            <a href="#">IG</a>
-            <a href="#">Behance</a>
+            <a href="https://www.instagram.com/ph_nagi/">IG</a>
+            <a href="https://www.behance.net/ea627e09">Behance</a>
         </div>
     </div>
 
