--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nagi</title>
+    <title>nagiPortfolioAbout</title>
     <link rel="stylesheet" href="style/init.css">
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/AboutPage/about.css">
