--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="MainworkTwoBox">
             <div class="MainWork">
-                <a href="/workPage/goAhand.html" class="MainWorkVideoBox">
+                <a href="./workPage/goAhand.html" class="MainWorkVideoBox">
                     <p class="MainWorkVideoMore">more</p>
                     <video src="assets/video/goAhand_1.mp4" autoplay muted loop></video>
                 </a>
@@ -102,10 +102,10 @@
     
         <div class="sec">
             <div class="secWork" id="secWork1" >
-                <a href="/workPage/homeTrust.html" class="secWorkVideoBox secWorkSpeed1" data-speed="1.5">
+                <a href="./workPage/homeTrust.html" class="secWorkVideoBox secWorkSpeed1" data-speed="1.5">
                     <img src="assets/images/VI/HomeTrust/VI.jpg" alt="">
                 </a>
-                <a href="/workPage/dropCoffee.html" class="secWorkContentBox secWorkSpeed1" data-speed="1.5">
+                <a href="../workPage/homeTrust.html" class="secWorkContentBox secWorkSpeed1" data-speed="1.5">
                     <p class="secWorkSubTitle">VI</p>
                     <p class="secWorkTitle">HomeTrust</p>
     
@@ -118,10 +118,10 @@
 
         <div class="sec">
             <div class="secWork" id="secWork2" >
-                <a href="#" class="secWorkVideoBox secWorkSpeed2" data-speed="1.5">
+                <a href="./workPage/dropCoffee.html" class="secWorkVideoBox secWorkSpeed2" data-speed="1.5">
                     <img src="assets/images/VI/Drop/Drop16.jpg" alt="">
                 </a>
-                <a href="#" class="secWorkContentBox secWorkSpeed2" data-speed="1.5">
+                <a href="./workPage/dropCoffee.html" class="secWorkContentBox secWorkSpeed2" data-speed="1.5">
                     <p class="secWorkSubTitle">Design</p>
                     <!-- <p class="secWorkTitle" style="font-family: Noto Serif TC">楓茶米</p> -->
                     <p class="secWorkTitle" >DropCoffe</p>
@@ -169,7 +169,7 @@
             <a  class="flowImgBox" id="fl-11" data-speed="7">
                 <img src="assets/images/photo/11.jpg" alt="">
             </a >
-            <a href="/workPage/photo.html" class="flowImgBox" id="fl-12" data-speed="5">
+            <a href="./workPage/photo.html" class="flowImgBox" id="fl-12" data-speed="5">
                 <div class="flowPBox">
                     <p>更多</p>
                 </div>
