--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nagi</title>
+    <title>nagiPortfolio</title>
     <link rel="stylesheet" href="style/init.css">
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/HomePage/landinPage.css">
@@ -105,7 +105,7 @@
                 <a href="./workPage/homeTrust.html" class="secWorkVideoBox secWorkSpeed1" data-speed="1.5">
                     <img src="assets/images/VI/HomeTrust/VI.jpg" alt="">
                 </a>
-                <a href="../workPage/homeTrust.html" class="secWorkContentBox secWorkSpeed1" data-speed="1.5">
+                <a href="./workPage/homeTrust.html" class="secWorkContentBox secWorkSpeed1" data-speed="1.5">
                     <p class="secWorkSubTitle">VI</p>
                     <p class="secWorkTitle">HomeTrust</p>
     
