--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div class="contentBox">
+    <!-- <div class="contentBox">
         <div class="contentTitleBox">
             <p class="ContentTitle">聯繫</p>
             <div class="contnetTitleLine"></div>
@@ -98,7 +98,7 @@
             <input class="submit" type="submit" value="提交" >
         </form>
         
-    </div>
+    </div> -->
 
     <footer >
         <div class="footerBox" id="footer" >
